log
Wed 10 May 2023 03:11:16 PM UTC: 
 tests:  0|4
total_score: 0/70
8b3801c
Wed 10 May 2023 03:16:16 PM UTC: 
 heap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
fa50d62
Wed 10 May 2023 03:16:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bed6c8f
Wed 10 May 2023 03:17:57 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ec91d01
Wed 10 May 2023 03:18:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f5293c4
Wed 10 May 2023 03:20:00 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |   ^~
heap.c:23:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |                                       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b49554b
Wed 10 May 2023 03:20:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:37: error: expected ‘;’ before ‘return’
   23 |   if (!h || !h -> heapArray) free(h) return NULL;
      |                                     ^~~~~~~
      |                                     ;
Compilation failed
dc3af9a
Wed 10 May 2023 03:20:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   23 |   if (!h || !h -> heapArray) free(h) ;return NULL;
      |   ^~
heap.c:23:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   23 |   if (!h || !h -> heapArray) free(h) ;return NULL;
      |                                       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
59a83b0
Wed 10 May 2023 03:21:02 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
816f7f9
Wed 10 May 2023 03:21:26 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b3d4056
Wed 10 May 2023 03:24:02 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
360a3a2
Wed 10 May 2023 03:25:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6e5bc27
Wed 10 May 2023 03:32:00 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   45 |   if(!pq -> size) return NULL;
      |                          ^~~~
heap.c:43:6: note: declared here
   43 | void heap_push(Heap *pq, void *data, int priority)
      |      ^~~~~~~~~
heap.c:51:27: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   51 |     if(pq -> heapArray[i] == NULL)
      |        ~~~~~~~~~~~~~~~~~~ ^~
      |                       |
      |                       heapElem {aka struct nodo}
cc1: all warnings being treated as errors
Compilation failed
18d7471
Wed 10 May 2023 03:32:35 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   45 |   if(!pq -> size) return NULL;
      |                          ^~~~
heap.c:43:6: note: declared here
   43 | void heap_push(Heap *pq, void *data, int priority)
      |      ^~~~~~~~~
heap.c:51:27: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   51 |     if(pq -> heapArray[i] == NULL)
      |        ~~~~~~~~~~~~~~~~~~ ^~
      |                       |
      |                       heapElem {aka struct nodo}
cc1: all warnings being treated as errors
Compilation failed
67e7be2
Wed 10 May 2023 03:32:54 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:51:27: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   51 |     if(pq -> heapArray[i] == NULL)
      |        ~~~~~~~~~~~~~~~~~~ ^~
      |                       |
      |                       heapElem {aka struct nodo}
Compilation failed
f9aed36
Wed 10 May 2023 03:33:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:51:27: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   51 |     if(pq -> heapArray[i] == NULL)
      |        ~~~~~~~~~~~~~~~~~~ ^~
      |                       |
      |                       heapElem {aka struct nodo}
Compilation failed
bfb72ae
Wed 10 May 2023 03:44:18 PM UTC: 
 heap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:17: error: statement with no effect [-Werror=unused-value]
   49 |     pq -> capac == pq -> capac * 2 + 1;
      |     ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
heap.c:45:7: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   int i = 0;
      |       ^
heap.c:51:5: error: ignoring return value of ‘realloc’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   51 |     realloc(pq -> heapArray, pq -> capac * sizeof(heapElem));
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b4e7867
Wed 10 May 2023 03:44:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:17: error: statement with no effect [-Werror=unused-value]
   49 |     pq -> capac == pq -> capac * 2 + 1;
      |     ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
heap.c:45:7: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   int i = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
fe7b3c0
Wed 10 May 2023 03:44:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:7: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   int i = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
cc4427a
